--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   google_fonts: ^2.1.0
   fl_chart: ^0.36.1
   provider: ^5.0.0
+  rflutter_alert: ^2.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
