--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   fl_chart: ^0.36.1
   provider: ^5.0.0
   rflutter_alert: ^2.0.2
+  url_strategy: ^0.2.0
+  velocity_x: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
